--- a/alice/misc/config.py.example
+++ b/alice/misc/config.py.example
@@ -77,7 +77,7 @@ settings = {
     "ttsType": "female",
     "ttsVoice": "Joanna",
     "useHLC": False,
-    "webInterfaceActive": True,
+    "webInterfaceActive": False,
     "webInterfacePort": 5000,
     "whisperWhenSleeping": True,
     "wifipassword":  ""
