--- a/alice/misc/config.py.example
+++ b/alice/misc/config.py.example
@@ -1,10 +1,12 @@
 settings = {
     "activeCountryCode": "US",
     "activeLanguage": "en",
-    "adminPinCode": 7894,
+    "adminPinCode": 1234,
     "aliceAutoUpdate": False,
     "aliceUpdateChannel": "beta",
+    "asoundConfig": "",
     "asr": "google",
+    "asrFallback": "snips",
     "asrTimeout": 10,
     "autoPruneStoredData": 1000,
     "autoReportSkillErrors": False,
@@ -14,15 +16,17 @@ settings = {
     "baseCurrency": "USD",
     "baseUnits": "metric",
     "debug": True,
+    "delegateNluTraining": False,
     "devMode": True,
+    "deviceName": "default",
     "disableSoundAndMic": True,
     "enableDataStoring": True,
     "githubToken":  "",
     "githubUsername":  "",
+    "ibmCloudAPIKey": "",
+    "ibmCloudAPIURL": "",
     "keepASROffline": False,
     "keepTTSOffline": False,
-    "micChannels": 1,
-    "micSampleRate": 16000,
     "mqttHost": "mqtt",
     "mqttPassword": "",
     "mqttPort": 1883,
@@ -35,10 +39,12 @@ settings = {
     "notUnderstoodRetries": 3,
     "onReboot": "",
     "probabilityThreshold": 0.45,
+    "recordAudioAfterWakeword": False,
+    "sessionTimeout": 10,
     "shortReplies": False,
     "skillAutoUpdate": False,
     "skillsUpdateChannel": "beta",
-    "ssid": "RNP",
+    "ssid": "XXX",
     "stayCompletlyOffline": False,
     "supportedLanguages": {
         "en": {
@@ -72,6 +78,7 @@ settings = {
             ]
         }
     },
+    "timezone": "Europe/Zurich",
     "tts": "amazon",
     "ttsLanguage": "en-US",
     "ttsType": "female",
