--- a/alice/docker-compose.yml
+++ b/alice/docker-compose.yml
@@ -11,45 +11,65 @@
 version: '2.2'
 services:
   alice-amd:
-      build:
-        context: .
-        dockerfile: ./Docker/Dockerfile
-      image: poulsp/alice-amd
-      container_name: alice-amd
-      init: true
-      restart: unless-stopped # Possible values are : no, on-failure[:max-retry], always, unless-stopped
-      #command: /usr/sbin/mosquitto -c /etc/mosquitto/mosquitto.conf
-      #command: bash /start-scripts/start-alice-automatic.sh
-      command: bash /start-scripts/start-alice-manual.sh
+    build:
+      context: .
+      dockerfile: ./Docker/Dockerfile
+    image:  poulsp/alice-amd
+    container_name: alice-amd
+    init: true
+    restart: unless-stopped # Possible values are : no, on-failure[:max-retry], always, unless-stopped
+    #command: /usr/sbin/mosquitto -c /etc/mosquitto/mosquitto.conf
+    #command: bash /start-scripts/start-alice-automatic.sh
+    command: bash /start-scripts/start-alice-manual.sh
 
-      env_file:
-        - ./Timezone.env
-      environment:
-        #- TZ=Europe/Copenhagen
-        - USE_DEEP_SPEECH=false
-        - DEVELOPMENT=false
-      volumes:
-        - ./misc:/misc
-        - ./Docker/host_volumes/start-scripts:/start-scripts
+    env_file:
+      - ./Timezone.env
+    environment:
+      #- TZ=Europe/Copenhagen
+      - USE_DEEP_SPEECH=false
+      - USE_PRE_BUILD_TGZ=true
+      # Not in use for the monent.
+      # - ALICE_GIT_SHA=3a2025990645
+      # - ALICECORE_GIT_SHA=1063f4346027
+      # - CONTEXTSENSITIVE_GIT_SHA=806cb58349d0
+      # - DATEDAYTIMEYEAR_GIT_SHA=89901c490045
+      # - REDQUEEN_GIT_SHA=39f4f888b38e
+      # - TELEMETRY_GIT_SHA=8c1945b24781
 
-        - ./Docker/host_volumes/config/snips.toml:/etc/snips.toml
-        - ./Docker/host_volumes/config/etc/mosquitto:/etc/mosquitto
-        - ./Docker/host_volumes/log/mosquitto:/var/log/mosquitto
+        # AliceCore - Version 1.2.8 in beta           1063f4346027
+        # ContextSensitive - Version 1.0.23 in beta   806cb58349d0
+        # DateDayTimeYear - Version 1.0.26 in beta    89901c490045
+        # RedQueen - Version 1.0.25 in beta           39f4f888b38e
+        # Telemetry - Version 1.2.0 in beta           8c1945b24781
 
-        - ./Docker/host_volumes/config/bashrc:/home/pi/.bashrc
-        - ./Docker/host_volumes/config/gitconfig:/home/pi/.gitconfig
-        - ./Docker/host_volumes/bin:/home/pi/bin
-        - ./Docker/host_volumes/ProjectAlice:/home/pi/ProjectAlice
+    volumes:
+      - /dev/shm:/dev/shm
+      - ./misc:/misc
+      - ./Docker/host_volumes/start-scripts:/start-scripts
 
-        - ./Docker/host_volumes/transport:/transport
-      ports:
-        # uncomment ports if command is command: /usr/sbin/mosquitto -c /etc/mosquitto/mosquitto.conf
-        # Container internal mosquitto.
-        #- "1883:1883"
-        #- "1884:1884"
-        - "5000:5000"
-      networks:
-       - alice-nw
+      - ./Docker/host_volumes/config/snips.toml:/etc/snips.toml
+      - ./Docker/host_volumes/config/etc/mosquitto:/etc/mosquitto
+      - ./Docker/host_volumes/log/mosquitto:/var/log/mosquitto
+
+      - ./Docker/host_volumes/config/bashrc:/home/pi/.bashrc
+      - ./Docker/host_volumes/config/pi.local:/home/pi/.local
+      - ./Docker/host_volumes/config/gitconfig:/home/pi/.gitconfig
+      - ./Docker/host_volumes/config/asound.conf:/etc/asound.conf
+
+      - ./Docker/host_volumes/bin:/home/pi/bin
+      - ./Docker/host_volumes/ProjectAlice:/home/pi/ProjectAlice
+
+      - ./Docker/host_volumes/transport:/transport
+    devices:
+      - "/dev/snd:/dev/snd"
+    ports:
+      # uncomment ports if command is command: /usr/sbin/mosquitto -c /etc/mosquitto/mosquitto.conf
+      # Container internal mosquitto.
+      #- "1883:1883"
+      #- "1884:1884"
+      - "5000:5000"
+    networks:
+     - alice-nw
 
 #
 # [ networks definition ]
