--- a/alice/Docker/host_volumes/config/etc/mosquitto/mosquitto.conf
+++ b/alice/Docker/host_volumes/config/etc/mosquitto/mosquitto.conf
@@ -5,9 +5,16 @@
 
 pid_file /var/run/mosquitto.pid
 
-persistence true
+persistence false
 persistence_location /var/lib/mosquitto/
 
-log_dest file /var/log/mosquitto/mosquitto.log
+log_dest none
+#log_dest file /var/log/mosquitto/mosquitto.log
 
-include_dir /etc/mosquitto/conf.d
+listener 1883
+protocol mqtt
+
+listener 1884
+protocol websockets
+
+#include_dir /etc/mosquitto/conf.d
