--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,14 @@
 *~
 *.bak
 
-
 #/utils
+
+/AliceYaml
+/alice/Docker/host_volumes/ProjectAlice-b3-gemme
+/TTS-gemme
+
+/node-red/extra/*
+!/node-red/extra/.keep
 
 # # Byte-compiled / optimized / DLL files
 # __pycache__/
