--- a/alice/docker-compose.yml
+++ b/alice/docker-compose.yml
@@ -3,6 +3,7 @@
 # docker-compose run --rm alice-amd bash
 # docker-compose exec alice-amd bash
 # docker-compose down;docker-compose up -d; docker-compose exec alice-amd bash
+# docker-compose up;docker-compose down
 #
 # docker-compose exec alice-amd bash -c 'snips-watch -vvv'
 
