--- a/alice/Docker/host_volumes/config/snips.toml.example
+++ b/alice/Docker/host_volumes/config/snips.toml.example
@@ -1,5 +1,5 @@
 [snips-common]
-##mqtt = "YOUR DOCKER HOST IP:1883"
+mqtt = "YOUR DOCKER HOST IP:1883"
 assistant = "/home/pi/ProjectAlice/assistant"
 
 ## MQTT authentication
