--- a/alice/misc/config.json.example
+++ b/alice/misc/config.json.example
@@ -1,7 +1,7 @@
 {
     "activeCountryCode": "US",
     "activeLanguage": "en",
-    "adminPinCode": 1234,
+    "adminPinCode": 9999,
     "advancedDebug": false,
     "aliceAutoUpdate": false,
     "aliceUpdateChannel": "master",
@@ -27,6 +27,8 @@
     "githubUsername": "YOUR GITHUBUSERNAME",
     "ibmCloudAPIKey": "",
     "ibmCloudAPIURL": "",
+    "inputDevice": "default",
+    "internetQuality": 10,
     "keepASROffline": false,
     "keepTTSOffline": false,
     "mqttHost": "YOUR MOSQUITTO IP",
@@ -40,6 +42,7 @@
     "nonNativeSupportLanguage": "",
     "notUnderstoodRetries": 3,
     "onReboot": "",
+    "outputDevice": "default",
     "probabilityThreshold": 0.343,
     "recordAudioAfterWakeword": false,
     "sessionTimeout": 10,
